changed gmail address

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
             <div class="info-box">
               <i class="bx bx-envelope"></i>
               <h3>Email Me</h3>
-              <p>ragon206735@gmail.com</p>
+              <p>thomas.preston0318@gmail.com</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 d-flex align-items-stretch">
